--- a/css/test.css
+++ b/css/test.css
@@ -9,8 +9,77 @@
 	transform: translateY(-50%);
 }
 
+.pop svg
+{ font-size: 3rem;
+
+}
+
+.pop {
+  margin-bottom: 130px;
+}
+
+.pop > div {
+  bottom: -105px;
+  background-color: white;
+  margin: -15px;
+}
+.colonneDroite {
+	background-color: #033b4a;
+	z-index: 10;
+	position: relative;
+	right: 50px;
+	top: 50px;
+
+}
+
+.colonneDroite img{
+  border-radius: 50%;
+}
+
+.rating {
+	color: gold;
+}
+
+.card .carousel-item {
+	height: 200px;
+  }
+  .card .carousel-caption {
+	padding: 0;
+	right: 0;
+	left: 0;
+	color: #3d3d3d;
+  }
+  .card .carousel-caption h3 {
+	color: #3d3d3d;
+  }
+  .card .carousel-caption p {
+	line-height: 30px;
+  }
+  .card .carousel-caption .col-sm-3 {
+	display: flex;
+	align-items: center;
+  }
+  .card .carousel-caption .col-sm-9 {
+	text-align: left;
+  }
+  .navi a {
+	  text-decoration:none;
+  }
+  a > .ico {
+	  background-color: grey;
+	  padding: 10px;
+	  
+  }
+  a:hover > .ico {
+	  background-color: #666;
+  }
+
 .carouselHauteur, .carouselHauteur img {
   height: 900px;
+
+}
+
+.carouselHauteur img {
   filter: brightness(70%);
 }
 
@@ -77,6 +146,15 @@
 
 }
 
+.listeTrauma{
+  list-style-type: none;
+}
+
+.fa-arrow-circle-right {
+  color: #0D75E6;
+  margin-right: 30px;
+}
+
 
 .video-play-button span {
     display: block;
@@ -100,21 +178,62 @@
   }
 }
 
+.patients {
+  bottom : -16px;
+  right: 15px;
+  width: 80%;
+}
+
+.patients p {
+  background-color: #033B4A;
+  color : white;
+  padding: 20px;
+  font-size: 20px;
+}
+.patients span {
+  color: #0059BE
+}
 
 /* YASSINE */
-.yassine h5 {
+/* .yassine h5 {
   color: grey;
-}
+} */
 
 .yassine p{
   color: grey;
+  font-size:15px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
-.nam{
+.yassine img{
+    width: 150px !important;
+    height: 250px !important;
+    justify-content: center;
+    margin:auto;
+} 
+
+.car{ 
+    display:flex;
+    justify-content:center;
+    margin: 10px !important;
+    align-items: center !important;
+    padding: 5px;
+    max-height: 350px;
+} 
+
+.nam {
   display: flex;
   justify-content:center;
   text-align: center;
+  color: #053E4F;
 }
+
+.yassine h2 {
+	color: #053E4F;
+	text-align: left;
+	padding-left: 0;
+}
+
 
 .fle1{
   border: solid 5px grey;
@@ -128,7 +247,56 @@
 /**********************************************************************************************************************************************************/
 /* syl */
 /*******/
+/**********************************************************************************************************************************************************/
+/* syl */
+/*******/
+.counterZoneParent{
+	position: relative;
+}
+.imageCounter{
+	height: 60vh;
+	overflow: hidden;
+}
+.imageCounter img{
+	position:relative;
+	bottom: 23%;
+}
+.counterZone{
+	width: 65%;
+	position: absolute;
+	top:13%;
+	right: 0;
+}
+.counterZone svg{
+	font-size: 2.5rem;
+}
+.counterText p:first-child{
+	font-size: 2rem;
+	font-weight:700;
+}
+.chimiste{
+	background: center url(../images/chimiste.jpg)
+}
+.chimiste>div{
+	background: #033b4af3;
+}
+.chimiste .btn{
+	border-radius: unset;
+}
 
+.chimiste .card{
+	background: none;
+	border-radius: 0;
+}
+.chimiste .card-body p{
+	font-size: 0.95rem;
+}
+
+.chimiste .card svg{
+	font-size: 3rem;
+}
+
+/*****************************************************footer****************************************************/
 .text-gris {
 	color: #8faec2;
 }
@@ -202,7 +370,6 @@ footer h3{
 	font-size: 0.9rem;
 	font-weight: 600;
 }
-
 /**********************************************************************************************************************************************************/
 /* FIN de sylvain */
 /*******/
