--- a/css/stylesheader.css
+++ b/css/stylesheader.css
@@ -41,13 +41,18 @@
 .headtroisiemeline p.second{
     color: #8C8C8C;
 }
-.iconetaille{
+.icon3 svg{
+    font-size: 1.5rem;
     
-    background:white;
-    padding: 20px;
+    margin: 10px;
     color:#086AD9;
-    box-shadow: 2px 2px 2px 2px grey;
     
+    
+}
+
+.icon3 div:first-child {
+    background:white;
+    box-shadow: 2px 2px 2px 2px grey;
 }
 .iconesanstaille{
     color:white;
